update go releaser build windows, darwin, linux binary

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -7,8 +7,14 @@ before:
     # you may remove this if you don't need go generate
     - go generate ./...
 builds:
-- env:
-  - CGO_ENABLED=0
+  - binary: ping_meta_tags
+    goos:
+      - windows
+      - darwin
+      - linux
+    goarch:
+      - amd64
+      - 386
 archive:
   replacements:
     darwin: Darwin
@@ -16,6 +22,8 @@ archive:
     windows: Windows
     386: i386
     amd64: x86_64
+  files:
+    - README.md
 checksum:
   name_template: 'checksums.txt'
 snapshot:
